# Prompete

./: .flake8  .gitignore  README.md  pyproject.toml  test_examples.py
.github/workflows/: python-package.yml
examples/: basic.py  function_calling.py  response_format_structured_output.py  strict.py  templates.py
examples/templates/: CustomPrompt  SpecialSystemPrompt  TaskPrompt
prompete/: __init__.py  chat.py  test_chat.py
